重构代码,修改基类,优化性能