@@ -9,12 +9,12 @@ import android.support.v7.widget.LinearLayoutManager;
 import android.support.v7.widget.RecyclerView;
 import android.view.LayoutInflater;
 import android.view.View;
+import android.widget.ProgressBar;
 
 import com.f8boss.zhihuribao.R;
 import com.f8boss.zhihuribao.adapter.RecyclerAdapter;
 import com.f8boss.zhihuribao.adapter.RollPageViewAdapter;
 import com.f8boss.zhihuribao.bean.IndextItemBean;
-import com.f8boss.zhihuribao.util.LogUtil;
 import com.f8boss.zhihuribao.util.Urls;
 import com.f8boss.zhihuribao.widget.RecycScrollListener;
 import com.google.gson.Gson;
@@ -23,13 +23,14 @@ import com.jude.rollviewpager.hintview.ColorPointHintView;
 import com.lzy.okhttputils.OkHttpUtils;
 import com.lzy.okhttputils.cache.CacheMode;
 import com.lzy.okhttputils.callback.StringCallback;
+import com.lzy.okhttputils.request.BaseRequest;
 import com.squareup.picasso.Picasso;
 
 import java.util.ArrayList;
 import java.util.List;
 
-import butterknife.Bind;
-import butterknife.ButterKnife;
+import butterknife.BindView;
+import okhttp3.Call;
 import okhttp3.Request;
 import okhttp3.Response;
 
@@ -37,14 +38,16 @@ import okhttp3.Response;
  * Created by jiansion on 2016/5/25.
  * 首页
  */
-public class FragmentIndext extends BaseFragment {
+public class FragmentIndex extends BaseFragment {
 
-    @Bind(R.id.mSwipeRefreshLayout)
+    @BindView(R.id.mSwipeRefreshLayout)
     SwipeRefreshLayout mSwipeRefreshLayout;
 
-    @Bind(R.id.mRecyclerView)
+    @BindView(R.id.mRecyclerView)
     RecyclerView mRecyclerView;
 
+    @BindView(R.id.mProgressBar)
+    ProgressBar mProgressBar;
 
     private RollPagerView mRollpageView;
 
@@ -58,7 +61,7 @@ public class FragmentIndext extends BaseFragment {
     //轮播的图片数据
     private List<IndextItemBean.TopStoriesBean> headerList;
 
-    private String TAG = "FragmentIndext";
+    private final static String TAG = "FragmentIndex";
     private RecyclerAdapter recyclerAdapter;
     private RollPageViewAdapter rollPageViewAdapter;
 
@@ -71,7 +74,6 @@ public class FragmentIndext extends BaseFragment {
     //初始化视图
     @Override
     public void initViews(View container, Bundle savedInstanceState) {
-        ButterKnife.bind(this, container);
         initRecyclerView();
         initObject();
         initSwipeRefreshLayout();
@@ -86,34 +88,42 @@ public class FragmentIndext extends BaseFragment {
     private void initSwipeRefreshLayout() {
         //设置一组刷新过程中的颜色
         mSwipeRefreshLayout.setColorSchemeColors(Color.RED, Color.GREEN, Color.BLUE);
-
+        mSwipeRefreshLayout.setRefreshing(true);
         mSwipeRefreshLayout.setOnRefreshListener(new SwipeRefreshLayout.OnRefreshListener() {
             @Override
             public void onRefresh() {
                 downFirstData();
-                //更新结束
-                mSwipeRefreshLayout.setRefreshing(false);
             }
         });
 
     }
 
     //用于分页加载跟多数据
-    private void page() {
-        LogUtil.e(TAG, "滑动到了底部");
+    private void pageMore() {
         OkHttpUtils
                 .get(Urls.ZHIHU_BEFORE + (beforeData - 1))
                 .tag(this)
-                .cacheKey("beforeData")
+                .cacheKey(Urls.ZHIHU_BEFORE + (beforeData - 1))
                 .cacheMode(CacheMode.REQUEST_FAILED_READ_CACHE)
                 .execute(new StringCallback() {
                     @Override
-                    public void onResponse(boolean isFromCache, String s, Request request, @Nullable Response response) {
+                    public void onBefore(BaseRequest request) {
+                        super.onBefore(request);
+                        mProgressBar.setVisibility(View.VISIBLE);
+                    }
 
+                    @Override
+                    public void onResponse(boolean isFromCache, String s, Request request, @Nullable Response response) {
                         IndextItemBean indextItemBean = gson.fromJson(s, IndextItemBean.class);
-                        beforeData = new Integer(indextItemBean.getDate());
+                        beforeData = Integer.valueOf(indextItemBean.getDate());
                         itemList.addAll(indextItemBean.getStories());
                         recyclerAdapter.notifyDataSetChanged();
+                    }
+
+                    @Override
+                    public void onAfter(boolean isFromCache, @Nullable String s, Call call, @Nullable Response response, @Nullable Exception e) {
+                        super.onAfter(isFromCache, s, call, response, e);
+                        mProgressBar.setVisibility(View.GONE);
                     }
                 });
 
@@ -128,7 +138,7 @@ public class FragmentIndext extends BaseFragment {
         mRecyclerView.addOnScrollListener(new RecycScrollListener() {
             @Override
             public void onBottom() {
-                page();
+                pageMore();
             }
 
             @Override
@@ -155,7 +165,7 @@ public class FragmentIndext extends BaseFragment {
         View headerView = LayoutInflater.from(mActivity).inflate(R.layout.fragment_index_header, mRecyclerView, false);
         mRollpageView = (RollPagerView) headerView.findViewById(R.id.mRollPageView);
         recyclerAdapter.setHeaderView(headerView);
-        mRollpageView.setHintView(new ColorPointHintView(mActivity, Color.WHITE, mActivity.getResources().getColor(R.color.colorGray)));
+        mRollpageView.setHintView(new ColorPointHintView(mActivity, Color.WHITE, Color.GRAY));
         mRecyclerView.setAdapter(recyclerAdapter);
 
     }
@@ -166,14 +176,25 @@ public class FragmentIndext extends BaseFragment {
         OkHttpUtils
                 .get(Urls.ZHIHUNEWS)
                 .tag(this)
-                .cacheKey("latest")
+                .cacheKey(Urls.ZHIHUNEWS)
                 .cacheMode(CacheMode.REQUEST_FAILED_READ_CACHE)
                 .execute(new StringCallback() {
+                    @Override
+                    public void onBefore(BaseRequest request) {
+                        super.onBefore(request);
+                        mSwipeRefreshLayout.post(new Runnable() {//开启首次进来自动刷新动画
+                            @Override
+                            public void run() {
+                                mSwipeRefreshLayout.setRefreshing(true);
+                            }
+                        });
+                    }
+
                     @Override
                     public void onResponse(boolean isFromCache, String s, Request request, @Nullable Response response) {
                         IndextItemBean indextItemBean = gson.fromJson(s, IndextItemBean.class);
                         String date = indextItemBean.getDate();
-                        beforeData = new Integer(date);
+                        beforeData = Integer.valueOf(date);
                         itemList.clear();
                         headerList.clear();
                         itemList.addAll(indextItemBean.getStories());
@@ -187,12 +208,14 @@ public class FragmentIndext extends BaseFragment {
                         recyclerAdapter.notifyDataSetChanged();
                     }
 
+                    @Override
+                    public void onAfter(boolean isFromCache, @Nullable String s, Call call, @Nullable Response response, @Nullable Exception e) {
+                        super.onAfter(isFromCache, s, call, response, e);
+                        //更新结束
+                        mSwipeRefreshLayout.setRefreshing(false);
+                    }
                 });
     }
 
-    @Override
-    public void onDestroy() {
-        super.onDestroy();
-        OkHttpUtils.getInstance().cancelTag(this);
-    }
+
 }
